# tether

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release.yml
crates/tether/: Cargo.toml  build.rs
crates/tether-daemon/: Cargo.toml
crates/tether-daemon/src/: config.rs  lib.rs  registry.rs  server.rs
crates/tether-daemon/tests/: integration.rs
crates/tether-protocol/: Cargo.toml
crates/tether-protocol/src/: codec.rs  lib.rs  message.rs
crates/tether-proxy/: Cargo.toml
crates/tether-proxy/src/: main.rs
crates/tether-session/: Cargo.toml
crates/tether-session/src/: id_gen.rs  lib.rs  pty.rs  session.rs  terminal.rs
crates/tether/src/: main.rs  panel.rs  render.rs
crates/tetherd/: Cargo.toml
crates/tetherd/src/: main.rs
nix/: home-module.nix  module.nix  package.nix
