[package]
name = "tether-proxy"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tether-proxy"
path = "src/main.rs"

[dependencies]
tether-protocol = { workspace = true }
tokio = { workspace = true, features = ["net", "io-util", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
nix = { version = "0.29", features = ["user"] }
