[package]
name = "tether-session"
version.workspace = true
edition.workspace = true

[dependencies]
tether-protocol = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "sync", "time", "fs"] }
serde = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
nix = { version = "0.29", features = ["term", "process", "fs", "signal"] }
alacritty_terminal = "0.25"
libc = "0.2"
