[package]
name = "tether"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tether"
path = "src/main.rs"

[dependencies]
tether-protocol = { workspace = true }
tokio = { workspace = true, features = ["process", "io-util", "signal", "sync", "time"] }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
crossterm = "0.28"
dirs = "5"
libc = "0.2"
serde = { workspace = true }
toml = { workspace = true }
