[package]
name = "tetherd"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tetherd"
path = "src/main.rs"

[dependencies]
tether-daemon = { workspace = true }
tether-protocol = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
